Allow missing fixed_keys for configtypes.Dict
We just fill them up with a None value for the value type, so we can e.g. only
specify a subset of modes for bindings and the rest is {}.

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -2095,6 +2095,7 @@ bindings.commands:
                  'prompt', 'caret', 'register']
     valtype:
       name: Dict
+      none_ok: true
       keytype: Key
       valtype:
         name: Command
