Use a real config object in unit tests

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -2070,6 +2070,7 @@ bindings.default:
                  'prompt', 'caret', 'register']
     valtype:
       name: Dict
+      none_ok: true
       keytype: Key
       valtype: Command
   desc: >-
